--- a/22100143_Kim, Yeryoung_12W_quiz.ipynb
+++ b/22100143_Kim, Yeryoung_12W_quiz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "[9491 rows x 8 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "[9491 rows x 4 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
        "[9491 rows x 4 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        "[9491 rows x 6 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
        "[9491 rows x 7 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,12 +988,12 @@
     "# [3-1] 최종 분석 대상 데이터 확인\n",
     "df_filtered\n",
     "# [3-2] 'card_output.csv'로 저장\n",
-    "df.to_csv('card_output.csv')\n"
+    "df.to_csv('201906_output.csv.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
        "[9491 rows x 7 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1347,7 @@
        "'\\n2019년 서울시의 일별 PM10 추세를 살펴보면,\\n1~3월에 거치면서 미세먼지 고농도로 피크를 찍는 것을 볼 수 있다. 특히, 3월 초에 약 180㎍/m³ 이상의 극심한 피크가 관측되었다.\\n 이는 초봄 꽃가루, 대기 정체 등 계절 특성 및 시기적으로 활발하한 활동이 시작되는 시기이기 피크를 미세먼지 농도가 높은 것으로 보인다.\\n\\n반면, 6~8월 여름철에는 PM10 농도가 현저히 낮아지는 추세이다. 이는 장마철을 비롯한 강수량 증가 등이 관여한 것으로 보인다.\\n\\n11~12월 겨울 초입에는 다시 농도가 상승하며, 난방 및 대기 정체의 영향을 받는 것으로 추정된다.\\n\\n전체적으로 PM10 농도는 겨울에서 증가하여 봄에 고점을 찍고, 여름의 장마철 특성 등에 기반하여 낮은 계절적 패턴을 보여주었다. \\n'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
        "\"\\n2019년 서울의 PM10 등급을 계절별로 비교한 결과,\\n여름은 전체의 약 67% 이상이 '좋음(good)' 등급으로 분포하며, 미세먼지 농도가 가장 양호하다.\\n여름 특성상 강수량 증가, 공기 순환 활발 등의 기상 요인 관여하여 좋게 PM10 농도가 낮게 나왔음을 알 수 있다.\\n\\n겨울 및 봄은 각각 ‘normal’ 등급이 70% 이상으로 높게 나타났다.\\n특히 봄철에는 ‘나쁨(bad)’과 ‘매우 나쁨(worse)’ 비율도 상대적으로 높은 것을 볼 수 있다.\\n이는 겨울과 봄을 거치면서 봄철 꽃가루, 겨울철 난방 및 대기 정체가 관여한 것 같다.\\n\\n가을(autumn)은 '좋음'과 '보통' 등급이 비교적 균형을 이루며, 상대적으로 안정적인 양상을 띄고 있다.\\n\""
       ]
      },
-     "execution_count": 61,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,12 +1459,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "#최종 분석 데이터(전처리 파일)\n",
-    "df.to_csv('final_card_output.csv')"
+    "df.to_csv('final_201906_output.csv.csv')"
    ]
   },
   {
