--- a/22100143_Kim, Yeryoung_12W_quiz.ipynb
+++ b/22100143_Kim, Yeryoung_12W_quiz.ipynb
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
     "# [3-1] 최종 분석 대상 데이터 확인\n",
     "df_filtered\n",
     "# [3-2] 'card_output.csv'로 저장\n",
-    "df.to_csv('201906_output.csv.csv')\n"
+    "df.to_csv('201906_output.csv')\n"
    ]
   },
   {
@@ -1459,12 +1459,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "#최종 분석 데이터(전처리 파일)\n",
-    "df.to_csv('final_201906_output.csv.csv')"
+    "df.to_csv('final_201906_output.csv')"
    ]
   },
   {
